--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -4,10 +4,12 @@
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
+
   <h2>Log In</h2>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Log In</button>
+    <button type="submit" class="btn btn-success">Log In</button>
+    <a href="{% url 'home' %}" type="button" class="btn btn-secondary">Back</a>
   </form>
 {% endblock content %}
