--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}MercuReporter{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
 </head>
 
 <body>
@@ -18,7 +19,50 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     {% if user.is_authenticated %}
+
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'user_dashboards' %}">
+                            <i class="fas fa-profile"></i>
+                            <span class="nav-item">Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'transaction_dashboards' %}">
+                            <i class="fas fa-transaction"></i>
+                            <span class="nav-item">Transactions</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'analytics_dashboards' %}">
+                            <i class="fas fa-analytics"></i>
+                            <span class="nav-item">Analytics</span>
+                        </a>
+                    </li>
+                    {% if user.is_supervisor %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'fleet_dashboards' %}">
+                            <i class="fas fa-vehicle"></i>
+                            <span class="nav-item">Fleet</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if user.is_driver %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'vehicle_dashboard' %}">
+                            <i class="fas fa-vehicle"></i>
+                            <span class="nav-item">Vehicle</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if user.is_owner %}
+                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'fleet_dashboards' %}">
+                            <i class="fas fa-vehicle"></i>
+                            <span class="nav-item">Fleets</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                     </li>
                     {% else %}
@@ -27,6 +71,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Welcome Page</a>
                     </li>
                     {% endif %}
                 </ul>
