--- a/dashboard/templates/dashboards/transactions/supervisor_transactions.html
+++ b/dashboard/templates/dashboards/transactions/supervisor_transactions.html
@@ -3,13 +3,27 @@
 {% block title %}Supervisor Transaction Dashboard{% endblock title %}
 
 {% block content %}
-<div class="container">
+
+
+    <!-- Headings -->
+    <div class="row">
+        <div class="col col-sm-3">
+                <p class="fs-3 text-center">Transaction Activities</p>
+        </div>
+        <div class="col">
+                <p class="fs-2 text-center">Latest Transactions</p>
+        </div>
+        <div class="col">
+                <p class="fs-2 text-center">{{ current_month }} Transaction Stats  </p>
+        </div>
+    </div>
+
+    <!-- Lists and tables -->
   <div class=" row">
+
+      <!-- Add transaction button list -->
     <div class="col col-sm-3">
         <ul class="nav flex-column">
-            <li class="nav-item">
-                <p class="fs-2">Fuel Transactions</p>
-            </li>
             <li class="nav-item">
                <div class="card">
                     <div class="card-header">
@@ -18,7 +32,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Select a file to upload</h5>
                         <p class="card-text">New transactions will be read and saved to the system.</p>
-                        <form action="{% url 'transaction_upload' %}" method="post" enctype="multipart/form-data">
+                        <form action="{% url 'transaction_upload' fleet.id %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ upload_transaction_file_form.as_p }}
                             <p><input type="submit" class="btn btn-secondary" value="upload"/></p>
@@ -52,18 +66,103 @@
 
         </ul>
     </div>
+
+      <!-- Latest Transaction Table -->
     <div class="col">
-      Scrollable & selectable list of latest transactions
+      <div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        Registration Number
+                    </th>
+                    <th>
+                        Date
+                    </th>
+                    <th>
+                        Quantity
+                    </th>
+
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+
+                {% for transaction in transactions %}
+                    <tr>
+                        <td>
+                            {{ transaction.registration_number }}
+                        </td>
+                        <td>
+                            {{ transaction.date }}
+                        </td>
+                         <td>
+                            {{ transaction.quantity }}
+                        </td>
+                        <td>
+                            <a class="btn btn-dark">View</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+
+            </tbody>
+        </table>
+      </div>
     </div>
+
+      <!-- Transaction Summary List -->
     <div class="col">
-      <p>Transaction Summary stats for current month</p>
-      <p>Number of transactions this month</p>
-      <p>Biggest and lowest transaction this month</p>
+
+        <div class="card card-outline-primary m-1 p-1">
+            <div class="bg-faded p-1">
+                <h4>
+                    Number of transactions
+                    <span class="badge rounded-pill bg-primary text-white" style="float:right">
+                        {{ num_transactions }}
+                    </span>
+                </h4>
+            </div>
+        </div>
+
+         <div class="card card-outline-primary m-1 p-1">
+            <div class="bg-faded p-1">
+                <h4>
+                    Average Fuel Price
+                    <span class="badge rounded-pill bg-primary text-white" style="float:right">
+                        {{ avg_fuel_price }}
+                    </span>
+                </h4>
+            </div>
+        </div>
+
+        <div class="card card-outline-primary m-1 p-1">
+            <div class="bg-faded p-1">
+                <h4>
+                    Largest Transaction
+                    <span class="badge rounded-pill bg-primary text-white" style="float:right">
+                        {{ largest_transaction }}
+                    </span>
+                </h4>
+            </div>
+        </div>
+
+         <div class="card card-outline-primary m-1 p-1">
+            <div class="bg-faded p-1">
+                <h4>
+                    Smallest Transaction
+                    <span class="badge rounded-pill bg-primary text-white" style="float:right">
+                        {{ smallest_transaction }}
+                    </span>
+                </h4>
+            </div>
+        </div>
+
       <p>Progress keeping around established benchmarks</p>
-      <p>Avg fuel price across fleet</p>
 
     </div>
   </div>
+
+    <!-- Graphs -->
     <div class="row">
         <div class="col col-sm-5">
             Graph of expenditure
@@ -74,5 +173,4 @@
         </div>
     </div>
 
-</div>
 {% endblock content %}
