--- a/transactions/templates/upload/view_upload_effects.html
+++ b/transactions/templates/upload/view_upload_effects.html
@@ -18,7 +18,7 @@
             <h4><i>Effect that new upload will have on fleet</i></h4>
         </div>
         <div class="col col-sm-2 text-center">
-             <a class="btn btn-success" href="{% url 'save_upload' %}"><b>Upload</b></a>
+             <a class="btn btn-success" href="{% url 'save_upload' fleet.id %}"><b>Upload</b></a>
         </div>
     </div>
      <div>
