--- a/fleet/templates/owner/OwnerFleetDetails.html
+++ b/fleet/templates/owner/OwnerFleetDetails.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!-- Headings row -->
 <div class="row">
-        <div class="col col-sm-3">
+        <div class="col col-sm-4">
             <h3><b>{{ fleet.Name }}</b></h3>
         </div>
         <div class="col">
@@ -27,8 +27,30 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Edit or Add a Vehicle</h5>
-                            <a class="btn btn-secondary" href="{% url 'add_vehicle' fleet.id %}">Add</a>
-                            <a class="btn btn-dark" href="#">Edit</a>
+                        <ul style="list-style-type: none">
+                            <li style="margin-bottom: 5px">
+                                <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Add A list of Vehicles
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li style="margin-left: 5px"><form action="{% url 'add_vehicle_list' fleet.id %}" method="post" enctype="multipart/form-data">
+                                       {% csrf_token %}
+                                        <b>Select the file with the list of vehicles</b>
+                                        <br>
+                                        {{ add_vehicle_list_form.as_p }}
+                                        <p><input type="submit" class="btn btn-secondary" value="upload"/></p>
+                                    </form></li>
+                                </ul>
+                        </div>
+                            </li>
+                            <li style="margin-bottom: 5px">
+                                <a class="btn btn-secondary" href="{% url 'add_vehicle' fleet.id %}">Add a Single Vehicle</a>
+                            </li>
+                            <li>
+                                <a class="btn btn-dark" href="#">Edit</a>
+                            </li>
+                        </ul>
                         </div>
                     </div>
                 </li>
@@ -105,6 +127,11 @@
                                         </td>
                                     </tr>
                                 {% endfor %}
+                                <tr>
+                                    <td></td>
+                                    <td><a href="{% url 'vehicle_list' fleet.id %}" class="btn btn-info">View All</a></td>
+                                    <td></td>
+                                </tr>
                             </tbody>
                          </table>
                     </div>
@@ -164,6 +191,11 @@
                         {% empty %}
                         <p>No Merchants in fleet</p>
                         {% endfor %}
+                        {% if merchants %}
+                            <div class="text-center">
+                                <a href="#" class="btn btn-info">View All</a>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- second list column -->
@@ -185,6 +217,11 @@
                         {% empty %}
                         <p>No Brands in fleet</p>
                         {% endfor %}
+                        {% if brands %}
+                            <div class="text-center">
+                                <a href="#" class="btn btn-info">View All</a>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
