--- a/fleet/templates/supervisor/SupervisorFleetDetails.html
+++ b/fleet/templates/supervisor/SupervisorFleetDetails.html
@@ -15,7 +15,7 @@
         </div>
 </div>
 <div class="row">
-    <div class="col col-sm-3">
+    <div class="col col-sm-4">
         <ul class="nav flex-column">
             <li class="nav-item">
                 <div class="card">
@@ -24,14 +24,35 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Edit or Add a Vehicle</h5>
-                        <a class="btn btn-secondary" href="{% url 'add_vehicle' fleet.id %}">Add</a>
-                        <a class="btn btn-dark" href="#">Edit</a>
+                        <ul style="list-style-type: none">
+                            <li style="margin-bottom: 5px">
+                                <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Add A list of Vehicles
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><form action="{% url 'add_vehicle_list' fleet.id %}" method="post" enctype="multipart/form-data">
+                                       {% csrf_token %}
+                                        <b>Select the file with the list of vehicles</b>
+                                        <br>
+                                        {{ add_vehicle_list_form.as_p }}
+                                        <p><input type="submit" class="btn btn-secondary" value="upload"/></p>
+                                    </form></li>
+                                </ul>
+                        </div>
+                            </li>
+                            <li style="margin-bottom: 5px">
+                                <a class="btn btn-secondary" href="{% url 'add_vehicle' fleet.id %}">Add a Single Vehicle</a>
+                            </li>
+                            <li>
+                                <a class="btn btn-dark" href="#">Edit</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+                 <br/>
             </li>
-            <li class="nav-item">
-                <p></p>
-            </li>
+
             <li class="nav-item">
                 <div class="card">
                     <div class="card-header bg-info">
@@ -43,6 +64,7 @@
                         <a class="btn btn-dark" href="#">Edit</a>
                     </div>
                 </div>
+                 <br/>
             </li>
             <li class="nav-item">
                 <div class="card">
@@ -55,6 +77,7 @@
                         <a class="btn btn-dark" href="#">Edit</a>
                     </div>
                 </div>
+                 <br/>
             </li>
 
         </ul>
@@ -88,6 +111,11 @@
                         </td>
                     </tr>
                 {% endfor %}
+            <tr>
+                <td></td>
+                <td><a href="{% url 'vehicle_list' fleet.id %}" class="btn btn-info">View All</a></td>
+                <td></td>
+            </tr>
 
             </tbody>
         </table>
@@ -111,6 +139,11 @@
                 {% empty %}
                 <p>No Merchants in fleet</p>
                 {% endfor %}
+                {% if merchants %}
+                <div class="text-center">
+                    <a href="#" class="btn btn-info">View All</a>
+                </div>
+                {% endif %}
             </div>
         <hr>
         <h4 class="card-title"><b>Fleet Brands</b></h4>
@@ -130,6 +163,11 @@
                 {% empty %}
                 <p>No Brands in fleet</p>
                 {% endfor %}
+                {% if brands %}
+                <div class="text-center">
+                    <a href="#" class="btn btn-info">View All</a>
+                </div>
+                {% endif %}
             </div>
     </div>
 
