--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 {% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}MercuReporter{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link href='{% static "css/base.css" %}' rel="stylesheet">
 
 </head>
 
@@ -81,12 +80,24 @@
         </div>
     </nav>
 
+    {% if messages %}
+        {% for msg in messages %}
+            <!-- saying alert warning and alert info works because bootstrap has those colours -->
+            <div class="alert alert-{{ msg.tags }} alert-dismissible" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="x"></button>
+                {{ msg.message }}
+
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <div class="container">
         {% block content %}
         {% endblock content %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="{% static 'js/base.js' %}"></script>
+
 </body>
 
 </html>
